samples/_failures_safe/1761177220_a1847c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b2451a6.c: In function ‘display_stats’:
./samples/SAFE/__tmp_7b2451a6.c:143:12: error: missing terminating " character
  143 |     printf("Info
      |            ^~~~~
./samples/SAFE/__tmp_7b2451a6.c:143:5: error: expected expression at end of input
  143 |     printf("Info
      |     ^~~~~~
./samples/SAFE/__tmp_7b2451a6.c:143:5: error: expected declaration or statement at end of input
